--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+
+.Teachr {
+    text-aliign: center;
+    background-color: dimgray;
+    color: darkgrey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.TeacherManagment {
+    width: 80%;
+    margin: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+head {
+    text-align: center;
+    text-transform: uppercase;
+    margin: 10px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input {
+    width: 100%;
+    height: 30px;
+    outline-color: lightgray;
+    background-color: gray;
+    color: #fff;
+    cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.BrithInput {
+    width: 20%;
+}
+    button{
+    width: 30%;
+    height: 30%;
+    border: gray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table {
+    width: 80%;
+    text-align: center;
+    margin: 20px 0;
+    border: gray;
+    background-color: gray;
 }
+
+table th {
+    text-transform: capitalize;
+}
+
+th, td {
+
+    padding: 8px;
+
+}
+
